# drf-starter

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
nginx/: nginx.conf
src/accounts/: admin.py  filters.py  models.py  serializers.py
src/accounts/migrations/: 0001_initial.py
src/accounts/tasks/: users.py
src/accounts/urls/: __init__.py  admin.py  public.py  user.py
src/accounts/utils/: token.py
src/accounts/views/: admin.py  public.py  user.py
src/base/: exceptions.py  models.py  permissions.py  serializers.py  type_choices.py  views.py
src/base/apis/: __init__.py  renderers.py  swagger.py
src/base/cache/: redis_cache.py
src/base/helpers/: __init__.py  classes.py  decorators.py  email.py  pagination.py  utils.py
src/base/middleware/: __init__.py  app_logger.py  auth.py
src/myproject/: urls.py
src/myproject/settings/: __init__.py  app_vars.py  apps.py  base.py  celery.py  database.py  logger.py  third_party.py
src/scripts/: create_db.sh  deploy.sh  entrypoint.sh  export_env.sh  fresh_init.sh  init_db.sh
src/seeders/users/: factories.py  load_super_user.py  load_user.py
src/tests/: base.py
src/tests/accounts/: test_admin.py
